[project]
name = "ComfyUI-Precision-Model-Save"
description = "Your Intelligent Assistant for Comfy-UI."
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/TiwazM/ComfyUI-Precision-Model-Save"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "TiwazM"
DisplayName = "ComfyUI-Precision-Model-Save"
Icon = ""
